fix: Converte código para Java 8