@@ -1,6 +1,7 @@
 package br.gov.lexml.eta.etaservices.printing.xml;
 
 
+import br.gov.lexml.eta.etaservices.printing.Emenda;
 import br.gov.lexml.eta.etaservices.printing.ModoEdicaoEmenda;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -9,7 +10,8 @@ import org.xmlunit.builder.Input;
 import javax.xml.transform.Source;
 import java.time.LocalDate;
 import java.time.ZoneId;
-import java.util.List;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 import static br.gov.lexml.eta.etaservices.printing.Sexo.M;
@@ -24,7 +26,7 @@ class EmendaXmlMarshallingTest {
 
     @BeforeEach
     void setUp() {
-        final var emenda = setupEmenda();
+        final Emenda emenda = setupEmenda();
         xmlSource = getXmlSource(emenda);
     }
 
@@ -45,6 +47,11 @@ class EmendaXmlMarshallingTest {
     }
 
     private EmendaRecord setupEmenda() {
+
+        final Map<String, Object> metadados = new LinkedHashMap<>();
+        metadados.put("metadado1", "valor1");
+        metadados.put("metadado2", "valor2");
+
         return new EmendaRecord(
                 LocalDate.parse("2022-06-01")
                         .atStartOfDay()
@@ -53,64 +60,65 @@ class EmendaXmlMarshallingTest {
                 "eta",
                 "1.0.0",
                 ModoEdicaoEmenda.EMENDA,
-                Map.of("metadado1", "valor1", "metadado2", "valor2"),
+                metadados,
                 new RefProposicaoEmendadaRecord("urn:lex:br:federal:medida.provisoria:800:2022", "MPV", "800", "2022", "Altera a Lei 1.234/56 e dá outras providências", "bcd"),
                 new ColegiadoApreciadorRecord(CD, PLENARIO, null),
                 new EpigrafeRecord("A Presidência da República em suas atribuições sanciona", ""),
-                List.of(new ComponenteEmendadoRecord(
+                Collections.singletonList(new ComponenteEmendadoRecord(
                         "urn:...",
                         true,
                         null,
                         null,
-                         new DispositivosEmendaRecord(
-                                 List.of(),
-                                 List.of(),
-                                 List.of(
-                                         new DispositivoEmendaAdicionadoRecord(
-                                                 "Artigo",
-                                                    "2",
-                                                    "Art. 2-1",
-                                                 "Lorem ipsum dolor sit amet, consetet",
-                                                    false,
-                                                 false,
-                                                 false,
-                                                 null,
-                                                 false,
-                                                 "0",
-                                                 "1",
-                                                 "urn:lex:br:federal:medida.provisoria:800:2022",
-                                                    false,
-                                                 List.of(
-                                                         new DispositivoEmendaAdicionadoRecord("Artigo",
-                                                                 "2",
-                                                                 "Art. 2-1",
-                                                                 "Lorem ipsum dolor sit amet, consetet",
-                                                                 false,
-                                                                 false,
-                                                                 false,
-                                                                 null,
-                                                                 false,
-                                                                 "0",
-                                                                 "1",
-                                                                 "urn:lex:br:federal:medida.provisoria:800:2022",
-                                                                 false,
-                                                                 List.of())
-                                                 )))))),
-                new ComandoEmendaRecord(null, List.of()),
+                        new DispositivosEmendaRecord(
+                                Collections.emptyList(),
+                                Collections.emptyList(),
+                                Collections.singletonList(
+                                        new DispositivoEmendaAdicionadoRecord(
+                                                "Artigo",
+                                                "2",
+                                                "Art. 2-1",
+                                                "Lorem ipsum dolor sit amet, consetet",
+                                                false,
+                                                false,
+                                                false,
+                                                null,
+                                                false,
+                                                "0",
+                                                "1",
+                                                "urn:lex:br:federal:medida.provisoria:800:2022",
+                                                false,
+                                                Collections.singletonList(
+                                                        new DispositivoEmendaAdicionadoRecord("Artigo",
+                                                                "2",
+                                                                "Art. 2-1",
+                                                                "Lorem ipsum dolor sit amet, consetet",
+                                                                false,
+                                                                false,
+                                                                false,
+                                                                null,
+                                                                false,
+                                                                "0",
+                                                                "1",
+                                                                "urn:lex:br:federal:medida.provisoria:800:2022",
+                                                                false,
+                                                                Collections.emptyList())
+                                                )))))),
+                new ComandoEmendaRecord(null, Collections.emptyList()),
                 "justificativa emenda",
                 "Brasilia",
                 LocalDate.parse("2019-06-01"),
-                new AutoriaRecord(PARLAMENTAR, true, 0, 0, List.of(
+                new AutoriaRecord(PARLAMENTAR, true, 0, 0,
+                        Collections.singletonList(
                         new ParlamentarRecord("abcd", "João da Silva", M, "MDB", "SP", CD, "Deputado")
                 ), null),
                 new OpcoesImpressaoRecord(true, "", false));
     }
 
-    private Source getXmlSource(EmendaRecord emenda) {
+    private Source getXmlSource(Emenda emenda) {
 
-        final var marshaller = new EmendaXmlMarshaller();
+        final EmendaXmlMarshaller marshaller = new EmendaXmlMarshaller();
 
-        final var xml = marshaller.toXml(emenda);
+        final String xml = marshaller.toXml(emenda);
 
         System.out.println(xml);
 
